update stopwatch 미완성

--- a/stopwatch/src/app/section/section.component.html
+++ b/stopwatch/src/app/section/section.component.html
@@ -1,8 +1,6 @@
-<div class="title">
 
-  <div class='insection'>
-    <app-time-display [inputData]="present"> </app-time-display>
-    <app-buttons (clickEvent)="startTime($event)"></app-buttons>
-  </div>
 
-</div>
+
+<router-outlet></router-outlet>
+<!--path값이 stopwatch가 들어올 때 보여주기-->
+<!-- <app-stwatch></app-stwatch> -->
